NEWRELIC-5922 - Extract map parsing out of LabelsConfigImpl so that the general parsing of Strings to Maps does not have labels specific validation applied.
Applying tag feature to Logback.

General tidy up.